--- a/public/style1/style.css
+++ b/public/style1/style.css
@@ -46,6 +46,11 @@ figure{
     margin: 1em 0;
 }
 
+img{
+    width: 110px;
+    height: 110px;
+}
+
 .contacts dl.contact{
     display: flex;
     display: -webkit-flex;
@@ -195,7 +200,7 @@ h4{
     left: 0;
     z-index: -2;
     height: 1.89vw;
-    width: 19vw;
+    width: 39vw;
 }
 
 .skills-secondary [data-skill="5"]::after{
@@ -223,7 +228,7 @@ h4{
     left: 0;
     z-index: -2;
     height: 1.89vw;
-    width: 3.6vw;
+    width: 18.6vw;
 }
 
 [data-skill="9"]::after{
@@ -235,8 +240,12 @@ h4{
     left: 0;
     z-index: -2;
     height: 1.89vw;
-    width: 34.6vw;
+    width: 20.6vw;
     opacity: 0.7;
+}
+
+h2{
+    font-size: 17px;
 }
 
 [data-skill="7"]::after{
